JSAI/error/src/test/resources/base/delete_del-f-proto-prototype-lacksprototype.js
var rec = {};
delete(rec.prototype);
var i = 0;
for (j in rec) {
  print(j);
  i += 1;
}
print(i);

